docs/v1/Docs/changelog.md
## 2020.09.08 - v1.3.3
* 书单样式调整
* 书单增加评级（1～5）
* 调整配置 `webpageTitleOnblurTimeOut`：该配置值为 -1 时，当页面失去焦点，页面title显示的文字不会变化。
* 调整配置 `webpageTitleFocusTimeOut`：该配置值为 -1 时，当页面获取焦点，页面title显示的文字不会变化。
* 增加配置 `essayCodeLanguages`：使用 hljs 渲染代码时，可限制自动识别语言的语言范围。
* 增加配置 `essayTitleStyle`：是否设置文章内容标题样式，默认不设置。
* 优化了文章摘要右侧图片的样式
* 微调文章内容样式。
* 修复菜单导航序号显示不全的问题

## 2020.07.10 - v1.3.2
* 兼容博客园现有的订阅功能并优化了弹窗样式
* 升级 Highlight.js 版本: v9.13.1 -> v10.1.1
* 增加了微信公众号放置
* 新的右下角控件样式
* 新的低分辨率下文章目录按钮样式
* 加快了点击文章目录跳转至相应标题的速度
* 主页 banner 标语配置 `homeBannerText` 支持以数组的方式配置
* 侧边菜单（首页、联系、订阅、管理）增加图标
* 替换了鼠标选中文字与文章目录的配色
* 更新基础 css 文件
* 更新文档（增加了主题内置的字体图标样式示例）
* 修复了夜间模式下播放器字体颜色变浅的问题
* 修复了横向滚动条过宽的样式问题
* 修复了 fork 本仓库 hljs 样式文件路径错误的问题

## 2020.06.09 - v1.3.1
* 文章 post meta 信息增加"推荐"
* 优化了主体滚动条的样式
* 优化设置网站图标的处理逻辑
* 主题渲染过程增加钩子
* 更新基础 css 文件
* 修复侧边栏菜单读取不到数据的问题
* 修复清空全部定时器失败的问题
* 修复图片 URL 含有空格时，banner 背景图片不显示的问题

## 2020.04.24 - v1.3.0
* 增加夜间模式样式适配
* 现在文章标题和目录可以自动适配标题了
* 优化了 h1~h5 文章标题样式
* 取消了 loading 关闭时的过渡动画
* 增加广告配置(默认开启)：```advertising```
* 增加代码行号配置(默认关闭)：```codeLineNumber```
* 废弃页脚标语配置：```bottomText.icon```
* 增加页脚标语配置：```bottomText.iconFont```
* 更新基础 css 文件
* 修复了当用户未登录时，文章内容被遮盖导致无法复制代码等操作的问题
* 修复了文章标题遮挡紧邻下方内容的问题

## 2020.04.06 - v1.2.9
* 增加夜间模式样式适配
* 现在夜间模式可以保存用户选择的状态了（4小时）
* 加快顶部底部跳转的速度
* 调整了文章标题样式结构
* 现在点击文章目录不会更改页面 URL 了
* 增加代码字体配置：```essayCode```
* 新的评论样式
* 更新基础 css 文件
* 修复了 v1.2.8 版本配置代码高度限制不生效的问题

## 2020.03.24 - v1.2.8
* 统一代码框、行内代码字体
* 统一代码框圆角大小、字体大小
* 增加文章中图片上下间隔
* 显示文章页中原有 post meta
* 低分辨率下，如无文章目录，不会显示文章目录按钮
* 移除显示/隐藏页面控制功能
* 增加日/夜间模式，可根据时间自动切换
* 增加日/夜间模式配置：```switchDayNight```
* 更新基础 css 文件
* 修复移动端代码框不能上下滑动的问题
* 修复行内代码在不同编辑器下样式不一致问题
* 修复使用 Makdown，代码框行号渲染有时多出一行的问题

## 2020.03.16 - v1.2.7
* 调整文章字体大小，增加字间距、行间距
* 增加文章打赏配置：```reward```
* 优化文章目录显示方式
* 更新基础 CSS 文件
* 修复个别代码框不能复制的问题
* 修复加载文章页时读取文章信息失败的问题

## 2020.03.10 - v1.2.6
* 替换所有引用 Gitee 的资源的地址
* 添加是否开启版本映射配置：isVersionMapping

## 2020.03.08 - v1.2.5
* 侧边栏头像增加鼠标移入旋转
* 优化主页文章内容样式
* 优化页脚样式
* 优化文章后缀样式
* 更换基础链接配色
* 主体内容部分增加阴影效果
* 调整页面整体字体大小
* 增代码高度限制配置：```codeMaxHeight```
* 更新基础 css 文件
* 删除无用代码

## 2020.02.20 - v1.2.4
* 侧边菜单增加文章分类
* 新的书单页面样式
* 新的图片灯箱效果
* 文章分类、标签增加跳转
* 代码增加行号渲染
* 文章目录增加了高度限制并美化了滚动条
* 文章页 banner 动效增加随机颜色配置 `essayTopAnimation.colorsRandom`
* 放开了文章标题换行限制
* 更新基础 CSS 文件
* 更新文档
* 压缩图片资源

## 2019.12.16 - v1.2.3
* 增加书单配置：```bookList```
* 增加关于书单设置[文档](https://fzxiang.github.io/Alson-Cnblogs-Theme/v1.1/#/Docs/Customization/bookList)
* 优化文章标题和目录生成逻辑
* 新的代码复制功能和样式
* 更新基础 CSS 文件
* 更新文档
* 修复了文章目录生成出多余目录的问题
* 修复了代码框复制按钮定位不准的问题

## 2019.11.21 - v1.2.2
* 修复版本映射处理中使用默认配置的问题

## 2019.11.15 - v1.2.0
* 侧边菜单增加最新评论
* 侧边菜单支持对数据的展开/收缩
* 调整了侧边菜单数据的顺序
* 增加了页面主体内容的宽度
* 修改了文章摘要的字体样式
* 调整了文章目录显示/隐藏判断条件
* 更新基础 CSS 文件
* 更新文档

## 2019.10.29 - v1.1.9
* 将引入的 GitHub Raw 的静态资源文件，更换至 Gitee
* 修改检查版本映射的逻辑
* ```fonts.googleapis.com``` 使用反向代理 ```fonts.proxy.ustclug.org```

## 2019.10.07 - v1.1.8
* 更新基础 CSS 文件
* 侧边菜单增加了积分与排名
* 页脚样式支持配置切换
* 增加页脚样式配置：```footerStyle```
* 部分文件合并压缩
* 修复重复加载默认 banner 图片
* 修复含有 ```html``` 标签的标题显示不全的问题

## 2019.09.07 - v1.1.7
* 更新基础 CSS 文件
* 调整文章标题h1~h2位置
* 统一文章标题h3~h5样式
* 去除文章自动段落缩进
* 更新菜单滚动条插件版本
* 修复个别浏览器文章页 banner 图片大小设置不生效的问题
* 修复个别浏览器菜单导航下划线样式显示不全的问题
* 修复谷歌浏览器(76.0.3809.132)菜单滚动卡住的问题

## 2019.08.30 - v1.1.6
* 更新基础 CSS 文件
* 增加版本映射功能，用以解决 CDN 缓存更新的问题
* 增加版本配置文件 ```version.conf```

## 2019.08.26 - v1.1.5
* 更新基础 CSS 文件
* highlightjs 样式文件使用 CDN 进行加速
* 侧边菜单增加了日历、找找看搜索框、文章档案
* 调整页脚信息展示顺序
* 增加默认头像
* 增加文章底部信息内部自定义图片配置：```essaySuffix.codeImgUrl```
* 增加菜单用户信息背景图片配置：```menuUserInfoBgImg```
* 移除页面底部标语中间图标动效
* 修复代码框复制按钮缺失的问题
* 修复使用 highlightjs 渲染代码，Markdown 代码样式显示错误
* 统一文章目录与 Markdown toc 生成目录的锚点
* 修复文章标题序号生成错误
* 修复侧边菜单数据中统计数据丢失的问题

## 2019.06.28 - v1.1.4
* 更新 RequireJS 至版本 2.3.6
* 修复加载 AMD 规范 JS 导致的错误
* 修复异常加载 jquery.js 文件

## 2019.06.14 - v1.1.3
* 增加配置项 ```homeBannerTextType``` 对主页 banner 上的标语获取源进行配置
* 增加文章页 banner 上显示文章作者、发布时间、分类、标签
* 不配置页脚标语，在页面上不会显示了
* 修改主页图片、文章页图片、文章页 banner 动效、页脚标语的默认配置
* 修复多次点击页面滚动按钮，动画排队的问题
* 修复右下菜单在页脚位置不可点击问题
* 优化代码

## 2019.05.17 - v1.1.2
* 菜单栏导航链接动态设置（个人整合v1.1配置的时候，疏忽了对该位置的处理）
* 增加菜单栏导航扩展配置 ```menuNavList```

## 2019.05.17 - v1.1.1 - Pre-release
* 增加设置初始化验证
* 优化代码

## 2019.05.16 - v1.1.0 - Pre-release
* 重构文件目录结构
* 精简主题设置流程
* 添加默认配置
* 更换页脚样式
* 增加了字体图标库拓展配置
* 优化代码

## 2019.04.27 - v1.0.0
* v1.0.0 版本发布

> 1. 经过迭代调试，基本稳定了，发布v1.0.0
> 2. 配置项 ```GhVersions``` 可以为版本号：```v1.0.0```
> 3. 以后测试代码不会上传到此库中了，单独开库处理

---
## 2019.04.28 - 81410de
* 修改 mCustomScrollbar 插件内部加载协议为https
> 由于 mCustomScrollbar 插件在http协议下报错：mismatched anonymous define() module

## 2019.04.26 - 70fa051
* 删除有字库字体引用，增加谷歌字体库引用（侧边栏HTML代码处）

## 2019.04.14 - 2f74751
* 重构菜单数据处理逻辑，单个数据的处理不会影响其它数据的添加

## 2019.04.12 - a73181b
* 添加自定义菜单数据配置项
* 侧边栏菜单支持自定义数据
* 根据关注状态修改关注图标样式

## 2019.03.11 - 1bdd29a
* 修复了 MD 格式下，代码长度不限制，滚动条不出现的问题
* 随笔页图片支持多张随机设置了
* 解除了随笔目录的数量限制
* 随笔目录支持折叠了
* 解除了页面滚动条的隐藏

## 2019.01.25 - 8555b9d
* 修复遇到数字标题时，目录格式错乱的问题

## 2019.01.22 - 91b3663
* 更新配置
* 主页图片支持多张设置，每次刷新页面随机设置其中一张

## 2018.12.18 - df0ffcf
* 修改了侧边栏 HTML 代码
* 限制了页面中代码的高度
* 美化了代码滚动条的样式

## 2018.12.17 - 9d97403
* 修复主页主体内容定位不准确的问题

## 2018.12.03 - 2d64ffa
* 修改了代码高亮相关配置项
* 重构代码高亮设置的逻辑
* 增加了 highlightjs 插件来处理代码高亮渲染
* 提升代码主题处理逻辑的优先级
* 修复了点击文章目录跳转不准确的问题

## 2018.11.23 - 07d2e00
* 美化 Markdown 样式

## 2018.11.21 - 6f0e937
* 解决了设置 prettify 代码高亮时，代码换行缺失的问题

## 2018.11.18 - 6432282
* 增加代码高亮主题的设置和实现

## 2018.11.16 - 087a55f
* 调整配置项
* 修改了渲染效果配置项的名称
* 增加了文件源的配置
* 增加底部标语图标的设置
* 增加了主题作者的显示控制
* 删除了使用博客园文件系统加载文件
* 屏蔽 AmazingCounters 网站计数器设置

## 2018.10.26 - f73b3b7
* 解决了设置冲突导致应该隐藏的页面特效显示了出来
* 屏蔽了随笔页因为尺寸更改而导致 MyTween.js 里疯狂报错

## 2018.10.24 - c249ab4
* 页面自适应调整
* 菜单增加我的标签

## 2018.10.17 - f0e24ca
* 修改随笔目录样式
* 菜单中未设置的数据相对应的标题不会显示了

## 2018.10.09 - f964276
* 页面优化

## 2018.10.07 - f43b986
* 增加页面特效设置

## 2018.09.29 - da79aa5
* 菜单设置代码重构
* 菜单添加最新随笔

## 2018.09.21 - d7ebb9e
* 增加全局配置
* 限制主页图片上文字显示行数

## 2018.08.29 - d452c8e
* 修改默认入园时间
* 添加博客运行时间
* 定时清除所有定时器
* 改变统计代码获取方式

## 2018.08.27 - cb90c7d
* 修改代码注释
* 显示文章博客和分享按钮

## 2018.08.14 - 210c0c7
* 更换评论框背景
* 修改生成文章目录格式
* 添加文章标题效果

## 2018.07.30 - 00c4bc0
* 调整页脚

## 2018.07.27 - f5f276e
* 添加菜单背景
* 修改图床地址
* 添加footer图片
* 修改底部进度条样式与位置
* 添加背景彩带
* 修改页脚样式
* 修改链接默认颜色
* 取消背景网格样式
* 修改非主页动画配色
* 修改主页与非主页头图
* 取消页面背景效果
* 添加页面HTML结构
* 添加博客园文件来源

## 2018.07.26 - 2c69f82
* 项目成立
